--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,12 @@
 @charset "UTF-8";
+a{ color:black;}
+
+/* header */
+#header{
+  position: fixed;
+  width: 100%;
+  overflow: hidden;
+  top: 0;
+  z-index: 800;
+  background: rgba(0,0,0,.3);
+}
