여기에 서브메뉴 쓰고 싶으면?
여기에 이것처럼 overflow쓰면 안됨.
드롭 다운이 ul에서 되지 못하기 때문.
지금은 없기에 그냥 overflow:hidden으로 가두리 쳐도 됨. ㅎㅎ

--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,11 @@ a{ color:black;}
   padding: 0 20px;
   font-size: 24px;
 }
+
+/* gnb */
+#gnb{
+  float: right;
+}
+#gnb ul{
+overflow: hidden;
+}
