common btn style
letter-spacing: 1px;
자간 이라는 뜻.
부드러운 느낌을 위해
트렌지션도 추가

버튼 클래스에다가 트렌지션을
넣어준다.

+ id 값 넣어주기

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,27 @@
 @charset "UTF-8";
 
+/* common button */
+.button{
+  font-size: 16px;
+  font-weight: 700;
+  height: 32px;
+  line-height: 32px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 8px 32px;
+  border-radius: 16px;
+  margin: 10px;
+  color: white;
+  background: #18d26e;
+  text-transform: uppercase;
+  transition: 0.5s;
+}
+
+.button:hover{
+  background: white;
+  color: #18d26e;
+}
+
 /* header */
 #header{
   position: fixed;
@@ -13,6 +35,7 @@
 /* 상단 로고 */
 #top_logo{
   float: left;
+  margin-left: 20px;
 }
 #top_log a{
   color: white;
@@ -49,4 +72,20 @@ section{
   justify-content: center;
   background: white;
   min-height: 100vh;
+}
+
+section#intro{
+  background: url("../img/intro/3.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+section > article{
+  text-align: center;
+  padding: 0 20px;
+  color: white;
+}
+
+section > article > p{
+  font-size: 20px;
 }
