--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,6 @@ section .row .column .inner{
 }
 
 section#myprofile .row .column .inner .job{
-
   color: #999999;
   font-size: 14px;
 }
@@ -139,6 +138,14 @@ section#myprofile:before{
   z-index: 9;
 }
 
+section#portfolio .row .column .inner p{
+  text-align: left;
+}
+
+section#portfolio .row .column .inner img{
+  border-radius: 5px;
+}
+
 section .row .column .inner.none_type{
   border: 0;
   box-shadow: none;
@@ -146,59 +153,14 @@ section .row .column .inner.none_type{
 }
 
 section .row .column .inner img.shadow{
-  box-shadow: rgba(0,0,0,.2);
+  box-shadow: 2px 2px 2px rgba(0,0,0,.2);
   box-sizing: border-box;
   border: 1px solid #f1f1f1;
   transition: 1s;
 }
+
 section .row .column .inner img.shadow:hover{
   box-shadow: none;
-}
-
-/* section row title style */
-
-/* wction row column style */
-section .row .column{
-  font: 25%;
-}
-
-section .row .column .inner{
-  margin: 15px;
-  padding: 15px;
-  background: white;
-  border: 1px solid #f1f1f1;
-  box-sizing: border-box;
-  box-shadow: 2px 2px 2px rgba(0,0,0, .2);
-  border-right: 5px;
-}
-section .row .column .inner img{
-  width: 100%;
-}
-
-
-
-section .row{
-  position: relative;
-  display: flex;
-  -ms-align-items: center;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap; /*wrap을 해야지 내려감 */
-  width: 1410px;
-  color: #333333;
-  padding: 120px 0; /*모바일시 안겹치게 하기위한 */
-  z-index: 500;
-  box-sizing: border-box;
-}
-
-section .row > h2{
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  height: 80px;
-  line-height: 80px;
-  text-align: center;
 }
 
 section > article{
@@ -211,7 +173,50 @@ section > article > h2{
   font-size: 40px;
 }
 
-
 section > article > p{
   font-size: 20px;
+}
+
+section .row{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 1410px;
+  color: #333333;
+  padding: 120px 0;
+  z-index: 500;
+  box-sizing: border-box;
+}
+
+section .row > h2{
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  left: 0px;
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
+}
+
+/*section row title style*/
+
+/*section row column style*/
+section .row .column{
+  flex: 25%;
+}
+
+section .row .column .inner{
+  margin: 15px;
+  padding: 15px;
+  background: white;
+  border: 1px solid #f1f1f1;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 2px rgba(0,0,0,.2);
+  border-radius: 5px;
+}
+
+section .row .column .inner img{
+  width: 100%;
 }
