column이 있는 이유
padding 값 여백을 주기 위해서

--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,7 @@ section#intro{
   background: url('../img/intro/3.jpg') no-repeat;
   background-size: cover;
 }
+/*  */
 
 section#myprofile{
   background: url('../img/bg/about_bg.jpg') no-repeat;
