--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ input[type=checkbox]#gnbcheck{ display: none; }
 
 /*mobile close button*/
 #mobile_close_btn{
+  display: none;
   position: absolute;
   top: 10px;
   right: 10px;
@@ -508,6 +509,9 @@ section .row .column .inner img{
   }
   #footer .container .row .column{
     flex: 100%;
+  }
+  #mobile_close_btn{
+    display: block;
   }
   /*mobile gnb*/
   input[type=checkbox]#gnbcheck:checked ~ #header #gnb{
