--- a/css/style.css
+++ b/css/style.css
@@ -340,7 +340,13 @@ section .row > h2:after{
 .progressbar .items_wrap:nth-of-type(4) .items{
   background: #abeb17;
 }
-
+section {
+  opacity: 0;
+}
+section.active {
+  opacity: 1;
+  transition: 1s;
+}
 /*animation*/
 section.active .row .column .inner.progressbar .items_wrap:nth-of-type(1) .items{
  width: 50%;
@@ -348,6 +354,7 @@ section.active .row .column .inner.progressbar .items_wrap:nth-of-type(1) .items
 }
 
 section.active .row .column .inner.progressbar .items_wrap:nth-of-type(2) .items{
+opacity: 1;
  width: 80%;
  transition: 1s .25s;
 }
