--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ section .row > h2:after{
 
 .progressbar .items .title{
   float: left;
-  font-size: 700;
+  font-weight: 700;
   padding: 6px 0;
 }
 
@@ -340,12 +340,30 @@ section .row > h2:after{
 .progressbar .items_wrap:nth-of-type(4) .items{
   background: #abeb17;
 }
-section {
+section .row{
   opacity: 0;
+  transform: translateY(-500px);
 }
-section.active {
+section.active .row {
   opacity: 1;
+  transform: translateY(0);
   transition: 1s;
+}
+/* myprofile */
+section#myprofile.active .row .column .inner img{
+  transform: scale(1.2);
+  transition: 2s;
+  opacity: 0.5;
+  z-index: -30;
+}
+section#portfolio.active .row .column {
+  opacity: 0;
+  transform: rotateY();
+}
+section#portfolio.active .row .column {
+  transform: rotateY(0);
+  transition: 3s;
+  opacity: 1;
 }
 /*animation*/
 section.active .row .column .inner.progressbar .items_wrap:nth-of-type(1) .items{
